turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
val GAUCHE = 2;
val DROITE = 8;
val STOP = 0;
val DEMI= 4;
val PASVIRAGE = 1;


def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
    
}